<resources>
    <string name="app_name">Submission 3</string>
    <string name="user_name">User Name</string>
    <string name="location">Location</string>
    <string name="menu_setting_language">Setting Language</string>
    <string name="change_language">Change Language</string>
    <string name="description_change_language">To change application language</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="search">Search</string>
    <string name="search_hint">Search Username</string>
    <string name="type">Type User</string>
    <string name="name_user">Name User</string>
    <string name="favorite">Favorite</string>

    <string name="content_title">Github User</string>
    <string name="content_text">Let\'s go check github user</string>

    <!--  Key  -->
    <string name="key_reminder">reminder</string>
    <string name="key_language">language</string>
    <string name="reminder_time">Reminder at 9.00 AM</string>
    <string name="company">Company</string>
    <string name="repository">Repository</string>

</resources>
