<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".DetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/Toolbar" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/cv_det_user"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_person_white_24dp"
        android:layout_gravity="center"
        android:layout_marginBottom="14dp"/>

    <TextView
        android:id="@+id/tv_det_username_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/user_name"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:layout_gravity="center"
        android:layout_marginBottom="6dp" />

    <TextView
        android:id="@+id/tv_det_name_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/name_user"
        android:textColor="@android:color/white"
        android:layout_gravity="center"
        android:layout_marginBottom="6dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginBottom="6dp">

        <TextView
            android:id="@+id/tv_det_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/company"
            android:textColor="@android:color/white"
            android:drawableStart="@drawable/ic_business_white_24dp" />

        <TextView
            android:id="@+id/tv_det_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/location"
            android:textColor="@android:color/white"
            android:drawableStart="@drawable/ic_place_white_24dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repository"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/tv_det_repository"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="0"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/followers"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/tv_det_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="0"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/following"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/tv_det_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="0"
            android:textColor="@android:color/white" />

    </LinearLayout>

<!--    <LinearLayout-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="horizontal"-->
<!--        android:gravity="center"-->
<!--        android:layout_gravity="center">-->

<!--        <TextView-->
<!--            android:id="@+id/tv_det_repository"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            tools:text="0"-->
<!--            android:textColor="@android:color/white" />-->

<!--        <TextView-->
<!--            android:id="@+id/tv_det_followers"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            tools:text="0"-->
<!--            android:textColor="@android:color/white"-->
<!--            android:layout_marginStart="16dp"/>-->

<!--        <TextView-->
<!--            android:id="@+id/tv_det_following"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            tools:text="0"-->
<!--            android:textColor="@android:color/white"-->
<!--            android:layout_marginStart="16dp"/>-->

<!--    </LinearLayout>-->

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TabLayout" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"/>

</LinearLayout>